@@ -7,6 +7,7 @@ CHANGES IN VERSION 1.3.1
  o fixed synapterTiny$QuantPep3DData, which had the rownames 
    as first column synapterTiny$QuantPep3DData$X. Detected 
    thanks to new mergedEMRTs arg. <2013-05-13 Mon>
+ o added mergedEMRTs arg to synergise <2013-05-22 Wed>
 
 CHANGES IN VERSION 1.3.0
 ------------------------
